Editor: Fix delete link overflow styles

--- a/static/style.css
+++ b/static/style.css
@@ -223,6 +223,12 @@ aside form button {
   cursor: pointer;
   background-color: transparent;
   font-size: 1rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: normal;
+  display: inline-block;
+  max-width: 100%;
 }
 
 aside form {
